Запрос файлов в директории
